Changed HorizontalColorComponentSlider's EditType from scoped enum to enum due to issues related to QTBUG-47652